--- a/index.html
+++ b/index.html
@@ -5,30 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic Calculator</title>
+    <script src="calculator.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="calcBody">
-        <div class="screen"></div>
+        <div class="screen">
+            <div class="answer"></div>
+            <div class="workingSpace"></div>
+        </div>
         <div class="calcButtons">
-            <div class="row1">
+            <div class="row">
                 <button class="numberButton">7</button>
                 <button class="numberButton">8</button>
                 <button class="numberButton">9</button>
                 <button class="operationButton">/</button>
             </div>
-            <div class="row2">
+            <div class="row">
                 <button class="numberButton">4</button>
                 <button class="numberButton">5</button>
                 <button class="numberButton">6</button>
                 <button class="operationButton">x</button>
             </div>
-            <div class="row3">
+            <div class="row">
                 <button class="numberButton">1</button>
                 <button class="numberButton">2</button>
                 <button class="numberButton">3</button>
                 <button class="operationButton">-</button>
             </div>
-            <div class="row4">
+            <div class="row">
                 <button class="numberButton">0</button>
                 <button class="decimalButton">.</button>
                 <button class="equalButton">=</button>
