--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="calcBody">
         <div class="screen">
-            <div class="answer"></div>
+            <div class="answer">  </div>
             <div class="workingSpace"></div>
         </div>
         <div class="calcButtons">
@@ -20,6 +20,7 @@
                 <button class="numberButton">8</button>
                 <button class="numberButton">9</button>
                 <button class="operationButton">/</button>
+                <button class="clearButton">c</button>
             </div>
             <div class="row">
                 <button class="numberButton">4</button>
