--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
         </div>
         <div class="calcButtons">
             <div class="row">
+                <button class="operationButton">^</button>
+                <button class="deleteButton">del</button>
+                <button class="clearButton">c</button>
+            </div>
+            <div class="row">
                 <button class="numberButton">7</button>
                 <button class="numberButton">8</button>
                 <button class="numberButton">9</button>
                 <button class="operationButton">/</button>
-                <button class="clearButton">c</button>
             </div>
             <div class="row">
                 <button class="numberButton">4</button>
